changing to virtual threads scenario4